=== 3.0.8 / 2012-08-20

* 1 bug fix:

  * Set test_globs default value to pick up test/*spec* files as well. (millisami)

=== 3.0.7 / 2012-08-07

* 1 minor enhancement:

  * Added quote from DrNic about manifests to readme.

=== 3.0.6 / 2012-05-15

* 1 minor enhancement:

  * Added install_plugins to the newb task

=== 3.0.5 / 2012-05-07

* 1 bug fix:

  * Fixed ridocs argument handling (erikh)

=== 3.0.4 / 2012-05-01

* 1 bug fix:

  * Removed rubygems/deprecated and rolled my own for users on older rubygems

=== 3.0.3 / 2012-04-09

* 2 bug fixes:

  * Fixed racc plugin's gem dependency activation
  * Fixed rake multi's use of multiruby_skip.

=== 3.0.2 / 2012-04-03

* 1 bug fix:

  * Generate urls list properly in #announcement if you use k/v form

=== 3.0.1 / 2012-03-26

* 1 minor enhancement:

  * Uniqify hoe plugins in sow Rakefile template. (evanphx)

* 3 bug fixes:

  * Fixed have_gem? checks in the install_plugins task to match the install_gem calls.
  * Fixed homepage handling when bullet list used in readme. (evanphx)
  * Removed deprecated use of #url in publish plugin

=== 3.0.0 / 2012-03-20

* 3 major enhancements:

  * Added activate_plugin_deps phase to plugin loading.
  * Removed long deprecated Hoe.new { block }.
  * Removed long deprecated handling of improper dependencies.

* 3 minor enhancements:

  * Added deprecation warnings to Hoe#url and Hoe#url=. Already deprecated for 9 mo.
  * Reworked all the plugins to use activate_XXX_deps, as necessary.
  * Switched internal usage of #url to #urls.

* 2 bug fixes:

  * Fixed failures in the publish_docs task when remote directory times cannot be changed (such as on rubyforge).
  * Fixed isolate setup for the racc plugin

=== 2.16.1 / 2012-03-13

* 2 bug fixes:

  * Fixed missing dependency for .gemtest creation (larskanis)
  * Fixed the rdoc/rcov commands to use sh. Oops.

=== 2.16.0 / 2012-03-06

* 9 minor enhancements:

  * Added Gem.bin_wrapper to provide API to bin wrapped files.