@@ -17,6 +17,8 @@ Hoe.spec '<%= project %>' do
   # developer('<%= XIF %>', '<%= XIF %>@example.com')
 
   # self.rubyforge_name = '<%= project %>x' # if different than '<%= project %>'
+
+  # license 'MIT' # this should match the license in the README
 end
 
 # vim: syntax=ruby
